Los DTOS de na.caceres estan casi listos.
