# s3_manda2-web/src/main/java/co/edu/uniandes/csw/manda2/dtos/ClienteDetailDTO.java
@@ -6,17 +6,74 @@
 package co.edu.uniandes.csw.manda2.dtos;
 import java.util.ArrayList;
 /**
- *      
+ * Clase que extiende de {@link ClienteDTO} para manejar la transformacion entre
+ * los objetos JSON y las Entidades de la base de datos. Para conocer el
+ * contenido de la ciudad vaya a la documentacion de {@link ClienteDTO}
+ * Al serializarse como JSON esta clase implementa el siguiente modelo: <br>
+ * <pre>
+ *   {
+ *      "id": number,
+ *      "nombre": string,
+ *      "cedula": string,
+ *      "fechaDeIngreso": date,
+ *      "calificacion": double,
+ *      "pagoAnticipado": boolean,
+ *      "horasDeServicioSemanal": number
+ *      "quejasYReclamos": [],
+ *      "servicios": [],
+ *      "pagos": [],
+ *      "billetera" []
+ *   }
+ * </pre> Por ejemplo un cliente detallado se representa asi:<br>
+ *
+ * <pre>
+ *
+ *   {
+ *      "id": number,
+ *      "nombre": string,
+ *      "cedula": string,
+ *      "fechaDeIngreso": date,
+ *      "calificacion": double,
+ *      "pagoAnticipado": boolean,
+ *      "horasDeServicioSemanal": number
+ *      "quejasYReclamos": [],
+ *      "servicios": [],
+ *      "pagos": [],
+ *      "billetera" []
+ *   }
+ *
+ * </pre>
  * @author na.caceres
  */
 public class ClienteDetailDTO extends ClienteDTO {
     
     //Atributos
+    /**
+     * Atributo que representa la billetera que tiene cada usuario.
+     */
     private BilleteraDTO billetera;
+    /**
+     *  Atributo que modela una lista con todos los servicios contratados por un
+     * usuario.
+     */
     private ArrayList<ServicioDTO> servicios;
+    /**
+     *  Atributo que modela una lista con todos los pagos contratados por un
+     * usuario.
+     */
     private ArrayList<PagoDTO> pagos;
+    /**
+     * Atributo que modela una lista con todos los reclamos hechos por un
+     * usuario.
+     */
     private ArrayList<ReclamoDTO> quejasYReclamos;
     //Constructor
+    /**
+     * Constructor por defecto
+     * 
+     * @param saldo
+     * @param puntosFidelidad
+     */
     public ClienteDetailDTO (double saldo, Integer puntosFidelidad)
     {
         super();
